@@ -12,6 +12,7 @@ ctms-commons history
 
 - Promote to released-module status (last pre-release was 0.5.0).  For earlier
   changes, see suite/authorization/CHANGELOG.prerelease.
+- Add `SuiteRoleMembership#toString`.
 
 1.0.5
 -----
